@@ -34,26 +34,26 @@ class Plugin(Template):
             ShowWarningDialog(self.parent, 'Could not load the file: ' +\
                     filename + ' \nPlease check the format.\n\n numpy.loadtxt'\
                     + ' gave the following error:\n'  +  str(e))
-        
-        # Check so we have enough columns
-        if load_array.shape[1]-1 < max(self.x_col, self.y_col, self.e_col):
-            ShowWarningDialog(self.parent, 'The data file does not contain'\
-                    + 'enough number of columns. It has ' + str(load_array[1])\
-                    + ' columns. Rember that the column index start at zero!')
-            # Okay now we have showed a dialog lets bail out ...
-            return
-        # The data is set by the default Template.__init__ function, neat hu
-        # Know the loaded data goes into *_raw so that they are not
-        # changed by the transforms
-        self.data[data_item_number].x_raw = load_array[:, self.x_col]
-        self.data[data_item_number].y_raw = load_array[:, self.y_col]
-        self.data[data_item_number].error_raw = load_array[:, self.e_col]
-        # Run the commands on the data - this also sets the x,y, error memebers
-        # of that data item.
-        self.data[data_item_number].run_command()
-        
-        # Send an update that new data has been loaded
-        self.SendUpdateDataEvent()
+        else:
+            # Check so we have enough columns
+            if load_array.shape[1]-1 < max(self.x_col, self.y_col, self.e_col):
+                ShowWarningDialog(self.parent, 'The data file does not contain'\
+                        + 'enough number of columns. It has ' + str(load_array[1])\
+                        + ' columns. Rember that the column index start at zero!')
+                # Okay now we have showed a dialog lets bail out ...
+                return
+            # The data is set by the default Template.__init__ function, neat hu
+            # Know the loaded data goes into *_raw so that they are not
+            # changed by the transforms
+            self.data[data_item_number].x_raw = load_array[:, self.x_col]
+            self.data[data_item_number].y_raw = load_array[:, self.y_col]
+            self.data[data_item_number].error_raw = load_array[:, self.e_col]
+            # Run the commands on the data - this also sets the x,y, error memebers
+            # of that data item.
+            self.data[data_item_number].run_command()
+            
+            # Send an update that new data has been loaded
+            self.SendUpdateDataEvent()
         
     def SettingsDialog(self):
         '''SettingsDialog(self) --> None
